# setup-driverless

./: .gitignore  CODEOWNERS  Controller.py  README.md  description.txt  gailey.md  init.sh  install_advanced.sh  install_basic.sh  kathleen.sh  name.txt
autotoy/: .catkin_workspace  .gitignore  defs.h  readme.md  run_cmd.sh  run_gazebo.sh  run_rviz.sh  world.launch
autotoy/src/car/: CMakeLists.txt  package.xml
autotoy/src/car/launch/: trackfinder.launch
autotoy/src/car/msg/: Control.msg  Location.msg  Velocity.msg
autotoy/src/car/src/: .camerasimulator.cpp.swp  Bencall.cpp  a.out  cam_class  cam_class.cpp  camerasimulator.cpp  cone_loc.txt  controller.cpp  controller.py  fov_loc.txt  test_camerasimulator.cpp  test_orderdata.cpp  test_svm.cpp  trackfinder.cpp
autotoy/src/simulation/: CMakeLists.txt  package.xml
autotoy/src/simulation/description/: CMakeLists.txt  package.xml
autotoy/src/simulation/description/launch/: dut_rviz.launch
autotoy/src/simulation/description/urdf/: dut.gazebo
autotoy/src/simulation/dut_gazebo/: CMakeLists.txt  package.xml
autotoy/src/simulation/dut_gazebo/worlds/: dut.world
autotoy/src/simulation/key_teleop/: CMakeLists.txt
autotoy/src/simulation/key_teleop/scripts/: key_teleop.py
autotoy/src/simulation/launch/: dut_world.launch
autotoy/src/simulation/map/: CMakeLists.txt  package.xml
autotoy/src/simulation/map/src/: conemap.cpp  cones.cpp  points_and_lines.cpp
autotoy/src/simulation/simulation/: CMakeLists.txt  package.xml  safe_CMakeLists.txt  safe_package.xml
autotoy/src/simulation/src/: basic_shapes.cpp  callBen.txt  conemap.cpp  cones (copy).txt  cones _1.txt  cones_2.txt  configuration.rviz  god.cpp  main.cpp  visualize_track (copy).txt  visualize_track.cpp
autotoy/src/simulation/urdf/: dut.xacro
autotoy/src/track/: CMakeLists.txt  coneplacer.cpp  package.xml
autotoy/src/track/msg/: Cone.msg  Cones.msg  HorizontalDirection.msg  Line.msg  Track.msg
autotoy/src/track/src/: callBen.cpp  coneplacer.cpp  coneplacer.txt  generator.cpp  generator.py  track.py
autotoy/src/track/srv/: ConePlacer.srv  Generator.srv
autotoy/using_markers/: CMakeLists.txt  package.xml
autotoy/using_markers/meshes/: cone_blue.dae  cone_yellow.dae
autotoy/using_markers/src/: cones.cpp
oscar/: test
