<?xml version="1.0"?>
<package format="2">
  <name>car</name>
  <version>0.0.0</version>
  <description>The car package</description>
  <maintainer email="driverless@dutracing.nl">DUT Driverless</maintainer>
  <author email="driverless@dutracing.nl">DUT Driverless</author>
  <license>MIT</license>
  <url type="website">dutracing.nl</url>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
