<?xml version="1.0"?>
<package format="2">
  <!-- Package information -->
  <name>car</name>
  <version>0.0.0</version>
  <description>The car package</description>
  <maintainer email="driverless@dutracing.nl">DUT Driverless</maintainer>
  <author email="driverless@dutracing.nl">DUT Driverless</author>
  <license>MIT</license>
  <url type="website">dutracing.nl</url>
  <!-- /Package information -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>track</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
