<?xml version="1.0"?>
<package format="2">
  <!-- Package information -->
  <name>simulation</name>
  <version>0.0.0</version>
  <description>The simulation package</description>
  <maintainer email="driverless@dutracing.nl">DUT Driverless</maintainer>
  <author email="driverless@dutracing.nl">DUT Driverless</author>
  <license>MIT</license>
  <url type="website">dutracing.nl</url>
  <!-- /Package information -->

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>track</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <!-- /Dependencies -->
</package>
