<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>The simulation metapackage</description>
  <maintainer email="driverless@dutracing.nl">DUT Driverless</maintainer>
  <author email="driverless@dutracing.nl">DUT Driverless</author>
  <license>MIT</license>
  <url type="website">dutracing.nl</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
